--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 { 
   "extensions": [
     "quantum.quantum-devkit-vscode",
-    "ms-dotnettools.csharp"
+    "ms-vscode.csharp"
   ],
   "settings": {
     "extensions.ignoreRecommendations": true
